# symphony-copilot

./: .gitignore  AGENTS.md  SPEC.md  WORKFLOW.md  pyproject.toml
.agents/skills/adversarial-investigation/: SKILL.md
.agents/skills/agents-md-authoring/: SKILL.md
.agents/skills/agents-md-authoring/references/: source.md
.agents/skills/architect-and-design/: SKILL.md
.agents/skills/ship-it/: SKILL.md
.agents/skills/ship-it/references/: iteration-playbook-template.md
.github/workflows/: ci.yml
dashboard/: AGENTS.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
dashboard/src/__tests__/: connection-status.test.tsx  event-log.test.tsx  fixtures.ts  metrics-grid.test.tsx  relative-time.test.tsx  retry-table.test.tsx  running-table.test.tsx  status-badge.test.tsx  stream-panel.test.tsx
dashboard/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
dashboard/src/components/: connection-status.tsx  event-log.tsx  metrics-grid.tsx  retry-table.tsx  running-table.tsx  status-badge.tsx  stream-panel.tsx
dashboard/src/hooks/: use-event-stream.ts  use-relative-time.ts  use-state-polling.ts
dashboard/src/lib/: api.ts  stream-types.ts  types.ts
docs/design/: agent-execution-architecture.md  claude-sdk-agent-harness.md  dashboard-frontend-redesign.md  dev-mode-isolation.md  session-streaming.md  system-architecture.md
symphony/: __init__.py  __main__.py  claude_runner.py  cli.py  config.py  dev.py  dev_harness.py  dev_mock_agent.py  errors.py  harness.py  logging_config.py  models.py  orchestrator.py  prompt.py  runner.py  server.py  streaming.py  tracker.py  workflow.py  workspace.py
tests/: conftest.py  test_claude_runner.py  test_cli.py  test_config.py  test_dev.py  test_integration.py  test_models.py  test_orchestrator.py  test_prompt.py  test_runner.py  test_server.py  test_streaming.py  test_tracker.py  test_workflow.py  test_workspace.py
tests/integration/: conftest.py  mock_agent.py  test_claude_harness.py  test_s13_7_http_server.py  test_s17_1_workflow_config.py  test_s17_3_tracker.py  test_s17_4_orchestrator.py  test_s17_5_agent.py  test_s17_6_observability.py  test_s17_7_cli.py  test_streaming.py
