[project]
name = "symphony"
version = "0.1.0"
description = "Orchestration service for coding agents"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pyyaml>=6.0,<7",
    "jinja2>=3.1,<4",
    "github-copilot-sdk>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "respx>=0.22",
]

[project.scripts]
symphony = "symphony.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
