[project]
name = "symphony"
version = "0.1.0"
description = "Orchestration service for coding agents"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pyyaml>=6.0,<7",
    "jinja2>=3.1,<4",
    "github-copilot-sdk>=0.3.0",
]

[project.optional-dependencies]
claude = ["claude-agent-sdk>=0.1"]
all = ["claude-agent-sdk>=0.1"]

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "respx>=0.22",
    "ruff>=0.11",
]

[project.scripts]
symphony = "symphony.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",    # line length handled by formatter
    "RUF001",  # ambiguous unicode in strings (intentional)
    "RUF002",  # ambiguous unicode in docstrings (intentional)
    "RUF003",  # ambiguous unicode in comments (intentional)
    "RUF006",  # asyncio fire-and-forget tasks (intentional pattern)
    "SIM105",  # contextlib.suppress — less readable in cleanup patterns
    "SIM117",  # combined with statements — less readable with patch contexts
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["A002", "B017", "E741"]  # allow shadowing builtins, broad pytest.raises, short vars

[tool.ruff.lint.isort]
known-first-party = ["symphony"]
